Fixed details tab on days when viewed on mobile

--- a/style.css
+++ b/style.css
@@ -465,7 +465,6 @@ body {
     flex-direction: column;
     transition: all 150ms linear;
     overflow: hidden;
-    padding-top: 1dvh;
 }
 
 #weekTab #weekContainer #dayForecastContainer #dayForecastCard #dayForecastMainInfo{
